p2/configs/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: header-route
spec:
  entryPoints:
  - web
  routes:
  - match: "PathPrefix(`/`) && Host(`app1.com`)"
    kind: Rule
    services:
    - name: app-one
      port: 80
  - match: "PathPrefix(`/`) && Host(`app2.com`)"
    kind: Rule
    services:
    - name: app-two
      port: 80
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: app-three
      port: 80
